cabal-version:      2.4
name:               fs-unix
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.3 || ==9.10.1

copyright:          2022-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           FileSystem effects
description:        FileSystem effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

-- Remove once we are on GHC 9.10+ for nix.
--
-- See TODO: [FilePath vs. OsString upgrade]
flag os-string
  description: Use the new os-string package
  default:     False
  manual:      False

common common-lang
  default-extensions: OverloadedRecordDot
  default-language:   GHC2021

benchmark benchmarks
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , effects-fs           ^>=0.1
    , effects-unix         ^>=0.1
    , effects-unix-compat  ^>=0.1
    , fs-utils             ^>=0.1
    , tasty-bench          ^>=0.3

  if flag(os-string)
    build-depends:
      , filepath   >=1.5.0.0 && <1.6
      , os-string  ^>=2.0.0

  else
    build-depends: filepath >=1.4.100.1 && <1.5

  hs-source-dirs: bench
