cabal-version:   2.4
name:            fs-unix
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/monad-effects/
bug-reports:     https://github.com/tbidne/monad-effects/issues
synopsis:        FileSystem effects
description:     Provides fileSystem effects
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions: OverloadedRecordDot
  default-language:   GHC2021

benchmark benchmarks
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , effects-fs           ^>=0.1
    , effects-unix         ^>=0.1
    , effects-unix-compat  ^>=0.1
    , filepath             >=1.5.0.0 && <1.6
    , fs-utils             ^>=0.1
    , os-string            ^>=2.0.0
    , tasty-bench          ^>=0.3

  hs-source-dirs: bench
