cabal-version:      2.4
name:               effects-env
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.3 || ==9.10.1

copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           Environment effects
description:        Environment effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-language: GHC2021

library
  import:          common-lang
  exposed-modules: Effects.System.Environment
  build-depends:
    , base          >=4.16.0.0 && <4.21
    , transformers  >=0.5.6.2  && <0.7

  hs-source-dirs:  src
