cabal-version:      2.4
name:               effects-exceptions
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.6 || ==9.6.2

copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           Exception effects
description:        Exception effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  if os(windows)
    cpp-options: -DWINDOWS

  if impl(ghc >=9.4.0)
    cpp-options: -DGHC_9_4

library
  import:           common-lang
  exposed-modules:  Effects.Exception
  build-depends:
    , base             >=4.14.0.0 && <4.19
    , containers       ^>=0.6.3.1
    , deepseq          >=1.4.4.0  && <1.6
    , exceptions       ^>=0.10.4
    , safe-exceptions  ^>=0.1.7.0
    , transformers     >=0.5.6.2  && <0.7

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , effects-exceptions
    , tasty               >=1.1.0.3 && <1.6
    , tasty-hunit         >=0.9     && <0.11
    , transformers

  if os(windows)
    build-depends: text >=1.2.4.0 && <2.1

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
