cabal-version:      2.4
name:               effects-fs-utils
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.3 || ==9.10.1

copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           FileSystem effects
description:        FileSystem effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

  if os(osx)
    cpp-options: -DOSX

  if os(windows)
    cpp-options: -DWINDOWS

-- TODO: [FilePath vs. OsString upgrade]
--
-- It would be nice to upgrade the filepath lower bound to >= 1.5.
-- Why? Because filepath 1.5+ is where the OsString type is split out into
-- the separate package os-string. Prior to that, it lives in the filepath
-- package. This can make it awkward dealing with libs where we need to
-- use OsStrings internals.
--
-- For instance, effects-unix requires knowing that OsString is a wrapper
-- over PosixString on unix systems. This is awkward to deal with in a
-- backwards-compatible way, since the OsString data constructor lives in
-- different places depending on the filepath version.
--
-- For now we have a conditional in the cabal file that uses a flag to
-- distinguish filepath < 1.5 and filepath >= 1.5 + os-string. But it's not
-- ideal.
--
-- The real problem for is that overriding boot libraries is difficult in nix,
-- so realistically we need to wait until filepath >= 1.5 is a boot lib in
-- nix. This means GHC 9.10+, so probably once 9.10 becomes the default.
--
-- Once that happens, consider upgrading the bound.

library
  import:          common-lang
  exposed-modules:
    Effects.FileSystem.IO
    Effects.FileSystem.OsPath
    Effects.FileSystem.PathType
    Effects.FileSystem.UTF8

  build-depends:
    , base                >=4.16.0.0  && <4.21
    , bytestring          >=0.10.12.0 && <0.13
    , deepseq             >=1.4.4.0   && <1.6
    , effects-exceptions  ^>=0.1
    , file-io             ^>=0.1.0.0
    , filepath            >=1.4.100.1 && <1.6
    , template-haskell    >=2.18.0.0  && <2.23
    , text                >=1.2.4.0   && <2.2

  hs-source-dirs:  src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Effects.FileSystem.IO
    Unit.Effects.FileSystem.OsPath

  build-depends:
    , base
    , bytestring
    , directory             ^>=1.3.8.0
    , effects-exceptions
    , effects-fs-utils
    , env-guard             ^>=0.2
    , filepath
    , hedgehog              >=1.0.2     && <1.5
    , tasty                 >=1.1.0.3   && <1.6
    , tasty-hedgehog        >=1.2.0.0   && <1.5
    , tasty-hunit           >=0.9       && <0.11
    , unordered-containers  ^>=0.2.14.0

  hs-source-dirs: test/unit
