cabal-version:      2.4
name:               effects-fs
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.6 || ==9.6.2

copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           FileSystem effects
description:        FileSystem effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  if os(osx)
    cpp-options: -DOSX

  if os(windows)
    cpp-options: -DWINDOWS

library
  import:           common-lang
  exposed-modules:
    Effects.FileSystem.FileReader
    Effects.FileSystem.FileWriter
    Effects.FileSystem.HandleReader
    Effects.FileSystem.HandleWriter
    Effects.FileSystem.PathReader
    Effects.FileSystem.PathWriter
    Effects.FileSystem.Utils

  build-depends:
    , base                 >=4.14.0.0  && <4.19
    , bytestring           >=0.10.12.0 && <0.13
    , deepseq              >=1.4.4.0   && <1.6
    , directory            ^>=1.3.8.0
    , effects-exceptions   ^>=0.1
    , effects-ioref        ^>=0.1
    , effects-unix-compat  ^>=0.1
    , file-io              ^>=0.1.0.0
    , filepath             >=1.4.100.1 && <1.4.200
    , optics-core          ^>=0.4
    , text                 >=1.2.4.0   && <2.2
    , time                 >=1.9.3     && <1.14
    , transformers         >=0.5.6.2   && <0.7

  hs-source-dirs:   src
  default-language: Haskell2010

-- NOTE: filepath upper bound of <1.4.200 because 1.4.200.0 deprecates some
-- modules, which apparently deprecates the EncodingException type.
-- This may be an accident, but it trips up -Wdeprecations, in any case.
-- Until we have a migration strategy, exclude it.
--
-- https://github.com/haskell/filepath/issues/209

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Misc
    PathReader
    PathWriter

  build-depends:
    , base
    , bytestring
    , effects-exceptions
    , effects-fs
    , effects-ioref
    , env-guard             ^>=0.2
    , hedgehog              >=1.0.2     && <1.5
    , tasty                 >=1.1.0.3   && <1.6
    , tasty-hedgehog        >=1.2.0.0   && <1.5
    , tasty-hunit           >=0.9       && <0.11
    , transformers
    , unordered-containers  ^>=0.2.14.0

  hs-source-dirs:   test/unit
  default-language: Haskell2010

benchmark benchmarks
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , effects-fs
    , effects-unix-compat
    , tasty-bench          ^>=0.3

  hs-source-dirs:   bench
  default-language: Haskell2010
