cabal-version:      2.4
name:               effects-fs
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.3 || ==9.10.1

copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           FileSystem effects
description:        FileSystem effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

  if os(osx)
    cpp-options: -DOSX

  if os(windows)
    cpp-options: -DWINDOWS

library
  import:             common-lang
  exposed-modules:
    Effects.FileSystem.FileReader
    Effects.FileSystem.FileWriter
    Effects.FileSystem.HandleReader
    Effects.FileSystem.HandleWriter
    Effects.FileSystem.PathReader
    Effects.FileSystem.PathWriter

  reexported-modules:
    , fs-utils:FileSystem.IO as FileSystem.IO
    , fs-utils:FileSystem.OsPath as FileSystem.OsPath
    , fs-utils:FileSystem.PathType as FileSystem.PathType
    , fs-utils:FileSystem.UTF8 as FileSystem.UTF8

  build-depends:
    , base                >=4.16.0.0  && <4.21
    , bytestring          >=0.10.12.0 && <0.13
    , deepseq             >=1.4.4.0   && <1.6
    , directory           ^>=1.3.8.0
    , effects-exceptions  ^>=0.1
    , effects-ioref       ^>=0.1
    , filepath            >=1.4.100.1 && <1.6
    , fs-utils            ^>=0.1
    , optics-core         ^>=0.4
    , text                >=1.2.4.0   && <2.2
    , time                >=1.9.3     && <1.15
    , transformers        >=0.5.6.2   && <0.7

  hs-source-dirs:     src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    PathReader
    PathWriter

  build-depends:
    , base
    , bytestring
    , effects-exceptions
    , effects-fs
    , effects-ioref
    , env-guard           ^>=0.2
    , fs-utils
    , tasty               >=1.1.0.3 && <1.6
    , tasty-hunit         >=0.9     && <0.11
    , transformers

  hs-source-dirs: test/unit
