cabal-version:   2.4
name:            effects-haskeline
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:     GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.3 || ==9.10.1
copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/monad-effects/
bug-reports:     https://github.com/tbidne/monad-effects/issues
synopsis:        Terminal effects
description:     Provides terminal effects
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-language: GHC2021

library
  import:          common-lang
  exposed-modules: Effects.Haskeline
  build-depends:
    , base          >=4.16.0.0 && <4.21
    , exceptions    ^>=0.10.4
    , haskeline     ^>=0.8.1.1
    , transformers  >=0.5.6.2  && <0.7

  hs-source-dirs:  src
