cabal-version:   2.4
name:            effects-http-client
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/effectful-libs/
bug-reports:     https://github.com/tbidne/effectful-libs/issues
synopsis:        Terminal effects
description:     Provides terminal effects
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-libs

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules: Effects.HTTP.Client
  other-modules:   Effects.HTTP.Client.Internal
  build-depends:
    , aeson            >=2.0       && <2.3
    , base             >=4.16.0.0  && <4.23
    , bytestring       >=0.10.12.0 && <0.13
    , exception-utils  ^>=0.1
    , exceptions       ^>=0.10.4
    , http-client      >=0.5.9     && <0.8
    , http-client-tls  >=0.3       && <0.5
    , http-types       ^>=0.12.3
    , text             >=1.2.4.0   && <2.2
    , transformers     >=0.5.6.2   && <0.7

  hs-source-dirs:  src
