cabal-version:      2.4
name:               effects-logger-ns
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.2.8 || ==9.4.7 || ==9.6.3 || ==9.8.1
copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           Adds namespaces to monad-logger
description:        Adds namespaces to monad-logger
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common-lang
  exposed-modules:  Effects.LoggerNS
  build-depends:
    , base              >=4.16.0.0  && <4.20
    , bytestring        >=0.10.12.0 && <0.13
    , containers        >=0.6.3.1   && <0.8
    , deepseq           >=1.4.4.0   && <1.6
    , effects-time      ^>=0.1
    , fast-logger       >=2.1       && <3.3
    , monad-logger      ^>=0.3.30
    , optics-core       ^>=0.4
    , template-haskell  >=2.16.0.0  && <2.22
    , text              >=1.2.4.0   && <2.2

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , containers
    , effects-logger-ns
    , effects-time
    , hedgehog           >=1.0.2   && <1.5
    , monad-logger
    , optics-core
    , tasty              >=1.1.0.3 && <1.6
    , tasty-hedgehog     >=1.2.0.0 && <1.5
    , tasty-hunit        >=0.9     && <0.11
    , text
    , time               >=1.9.3   && <1.14

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
