cabal-version:      2.4
name:               effects-logger-ns
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.3 || ==9.10.1

copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           Adds namespaces to monad-logger
description:        Adds namespaces to monad-logger
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules: Effects.LoggerNS
  build-depends:
    , base              >=4.16.0.0  && <4.21
    , bytestring        >=0.10.12.0 && <0.13
    , containers        >=0.6.3.1   && <0.8
    , deepseq           >=1.4.4.0   && <1.6
    , effects-thread    ^>=0.1
    , effects-time      ^>=0.1
    , fast-logger       >=2.1       && <3.3
    , monad-logger      ^>=0.3.30
    , optics-core       ^>=0.4
    , template-haskell  >=2.16.0.0  && <2.23
    , text              >=1.2.4.0   && <2.2

  hs-source-dirs:  src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , bytestring
    , containers
    , effects-logger-ns
    , effects-thread
    , effects-time
    , hedgehog           >=1.0.2   && <1.5
    , monad-logger
    , optics-core
    , tasty              >=1.1.0.3 && <1.6
    , tasty-hedgehog     >=1.2.0.0 && <1.5
    , tasty-hunit        >=0.9     && <0.11
    , text
    , time               >=1.9.3   && <1.15
    , transformers       >=0.5.6.2 && <0.7

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N
