cabal-version:   2.4
name:            effects-logger
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.3
   || ==9.10.1
   || ==9.12.1

copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/monad-effects/
bug-reports:     https://github.com/tbidne/monad-effects/issues
synopsis:        Namespaced monad-logger
description:     Adds namespaces to monad-logger
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules:
    Effects.Logger
    Effects.Logger.Namespace
    Effects.Logger.Utils

  build-depends:
    , base              >=4.16.0.0  && <4.22
    , bytestring        >=0.10.12.0 && <0.13
    , containers        >=0.6.3.1   && <0.8
    , deepseq           >=1.4.4.0   && <1.6
    , effects-thread    ^>=0.1
    , effects-time      ^>=0.1
    , fast-logger       >=2.1       && <3.3
    , monad-logger      ^>=0.3.30
    , mtl               >=2.2.1     && <2.4
    , optics-core       ^>=0.4
    , template-haskell  >=2.16.0.0  && <2.24
    , text              >=1.2.4.0   && <2.2

  hs-source-dirs:  src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Effects.Logger
    Unit.Effects.Logger.Namespace
    Unit.Prelude

  build-depends:
    , base
    , bytestring
    , containers
    , effects-logger
    , effects-thread
    , effects-time
    , hedgehog        >=1.0.2   && <1.6
    , monad-logger
    , mtl
    , optics-core
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hedgehog  >=1.2.0.0 && <1.5
    , tasty-hunit     >=0.9     && <0.11
    , text
    , time            >=1.9.3   && <1.15
    , transformers    >=0.5.6.2 && <0.7

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N
