cabal-version:      2.4
name:               effects-optparse
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.2.8 || ==9.4.7 || ==9.6.3
copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           Optparse-applicative effects
description:        Optparse-applicative effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common-lang
  exposed-modules:  Effects.Optparse
  build-depends:
    , base                  >=4.16.0.0 && <4.19
    , effects-exceptions    ^>=0.1
    , effects-fs            ^>=0.1
    , optparse-applicative  >=0.16.1.0 && <0.19
    , transformers          >=0.5.6.2  && <0.7

  hs-source-dirs:   src
  default-language: Haskell2010
