cabal-version:      2.4
name:               effects-terminal
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.6 || ==9.6.2

copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/monad-effects/
bug-reports:        https://github.com/tbidne/monad-effects/issues
synopsis:           Terminal effects
description:        Terminal effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common-lang
  exposed-modules:  Effects.System.Terminal
  build-depends:
    , base                >=4.14.0.0  && <4.19
    , bytestring          >=0.10.12.0 && <0.13
    , effects-exceptions  ^>=0.1
    , terminal-size       ^>=0.3.0
    , text                >=1.2.4.0   && <2.2
    , transformers        >=0.5.6.2   && <0.7

  hs-source-dirs:   src
  default-language: Haskell2010
