cabal-version:   2.4
name:            effects-terminal
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.3
   || ==9.10.1
   || ==9.12.1

copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/monad-effects/
bug-reports:     https://github.com/tbidne/monad-effects/issues
synopsis:        Terminal effects
description:     Provides terminal effects
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/monad-effects

common common-lang
  default-extensions: LambdaCase
  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules: Effects.System.Terminal
  build-depends:
    , base             >=4.16.0.0  && <4.22
    , bytestring       >=0.10.12.0 && <0.13
    , exceptions       ^>=0.10.4
    , pretty-terminal  ^>=0.1.0.0
    , terminal-size    ^>=0.3.0
    , text             >=1.2.4.0   && <2.2
    , transformers     >=0.5.6.2   && <0.7

  hs-source-dirs:  src
